# helios-observility

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md
deploy/: docker-compose.yml
deploy/grafana/provisioning/dashboards/: provider.yaml
deploy/keycloak/: realm-helios.json
deploy/loki/: loki.yaml
deploy/mimir/: mimir.yaml
deploy/otel-collector/: config.yaml
deploy/scripts/: seed_demo.py  seed_outcomes.py  smoke_test.py
deploy/tempo/: tempo.yaml
docs/: tutorial-stale-memory.md
schema/: README.md
schema/clickhouse/migrations/: 0000_create_database.sql  0001_create_agent_run.sql  0002_create_mcp_invocation.sql  0003_create_memory_operation.sql  0004_create_decision_edge.sql  0005_create_rca_report.sql  0006_create_eval_result.sql  0007_create_business_kpi.sql  0008_create_outcome_correlation.sql
schema/examples/: agent_run.json  decision_edge.json  mcp_invocation.json  memory_operation.json
schema/jsonschema/: agent_run.schema.json  common.schema.json  decision_edge.schema.json  mcp_invocation.schema.json  memory_operation.schema.json
schema/semconv/: helios-semconv.md
schema/tools/: validate.py
scripts/: quickstart.ps1  quickstart.sh
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: refund_agent.py
sdk-python/helios_sdk/: __init__.py  adapters.py  api.py  clickhouse.py  processor.py  runtime.py  semconv.py
services/rca/: Dockerfile  pyproject.toml
services/rca/helios_rca/: __init__.py  app.py  clickhouse.py  config.py  correlation.py  detectors.py  evaluators.py  reasoner.py  retrieval.py
(+6 files in other folders)
