[project]
name = "helios-sdk"
version = "0.1.0"
description = "HELIOS Agent Runtime Intelligence — Python instrumentation SDK (V1)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
]

[project.optional-dependencies]
dev = ["jsonschema>=4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["helios_sdk*"]
